--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Environment files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-._*
+.env.*
+.env.local
+.env.development
+.env.production
 
+# Vercel
+.vercel/
+
+# VSCode
+.vscode/
+
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.vercel
+pnpm-debug.log*
+
+# OS junk
+.DS_Store
